# news_letter

./: Cargo.toml  configuration.yml
migrations/: 20240129090922_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
