[package]
name = "news_letter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "news_letter"

[dependencies]
actix-web = "4"

[dev-dependencies]
reqwest = "0.11.23"
tokio = "1.35.1"
